--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  equatable: ^0.2.3
+  bloc: ^0.9.5
+  flutter_bloc: ^0.7.1
 
 dev_dependencies:
   flutter_test:
