Installed shared_preferences: ^0.5.1+2, cloud_firestore: ^0.9.7 & firebase_auth: ^0.8.1+4, Added google-services classpath 4.2.0 & updated android-tools.build:gradle classpath to 3.3.1 in build.gradle, Added android.useAndroidX=true, android.enableJetifier=true in gradle.properties for androidx compatibility, Changed minSdkVersion to 21, Added google-services.json file for cloud_firestore configuration.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   equatable: ^0.2.3
   bloc: ^0.9.5
   flutter_bloc: ^0.7.1
+  shared_preferences: ^0.5.1+2
+  cloud_firestore: ^0.9.7
+  firebase_auth: ^0.8.1+4
 
 dev_dependencies:
   flutter_test:
