--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -48,17 +46,18 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/temp0.jpg
-   - assets/images/temp1.jpg
-   - assets/images/temp2.jpg
-   - assets/images/temp3.jpg
-   - assets/images/temp4.jpg
-   - assets/images/temp5.jpg
-   - assets/images/temp6.jpg
-   - assets/images/temp7.jpg
-   - assets/images/temp8.jpg
-   - assets/images/temp9.jpg
-   - assets/images/auth_bg.jpg
+    - assets/images/temp0.jpg
+    - assets/images/temp1.jpg
+    - assets/images/temp2.jpg
+    - assets/images/temp3.jpg
+    - assets/images/temp4.jpg
+    - assets/images/temp5.jpg
+    - assets/images/temp6.jpg
+    - assets/images/temp7.jpg
+    - assets/images/temp8.jpg
+    - assets/images/temp9.jpg
+    - assets/images/auth_bg.jpg
+    - assets/placeholder/placeholder.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
@@ -73,7 +72,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: QuickSand
+      fonts:
+        - asset: assets/fonts/Quicksand-Regular.ttf
+        - asset: assets/fonts/Quicksand-Light.ttf
+        - asset: assets/fonts/Quicksand-Medium.ttf
+        - asset: assets/fonts/Quicksand-Bold.ttf
+          weight: 700
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
