--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  multi_image_picker: ^4.0.0
   equatable: ^0.2.3
   bloc: ^0.9.5
   flutter_bloc: ^0.7.1
