Imported loader.gif, ps-avatar.png & bg-avatar.png images to assets & pubspec.yaml file, Implemented profile_bloc in user_profile_page to fetch account profile, Implemented loading live profile image in popular_pages, Implemented loading live profile data in profile_sliver widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,9 @@ flutter:
     - assets/images/temp8.jpg
     - assets/images/temp9.jpg
     - assets/images/auth_bg.jpg
-    - assets/placeholder/placeholder.png
+    - assets/loader/loader.gif
+    - assets/avatars/ps-avatar.png
+    - assets/avatars/bg-avatar.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
