Imported avatar.png for profile_image_dialog, Created & exported profile_image_dialog in widgets.dart, Implemented call to open image dialog in profile_sliver.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
     - assets/images/temp9.jpg
     - assets/images/auth_bg.jpg
     - assets/loader/loader.gif
+    - assets/avatars/avatar.png
     - assets/avatars/ps-avatar.png
     - assets/avatars/bg-avatar.png
   #  - images/a_dot_burr.jpeg
