Installed firebase_storage: ^2.1.0+1 & uuid: ^2.0.0 plugins, Created & exported image_bloc in blocs.dart, Created profile_image_select_mode enum in profile model, Updated sharePreferences persisted parameters to remove on signout, Created & exported image_repository with uploadImage & persistImageUrl in repositories.dart, Created & exported image_service with uploadImage method in services.dart, Implemented the use of ProfileImageSelectMode enum in profile_image_dialog & profile_sliver widgets.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   bloc: ^0.9.5
   flutter_bloc: ^0.7.1
   shared_preferences: ^0.5.1+2
+  uuid: ^2.0.0
   cloud_firestore: ^0.9.7
+  firebase_storage: ^2.1.0+1
   firebase_auth: ^0.8.1+4
 
 dev_dependencies:
