--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_bloc: ^0.7.1
   shared_preferences: ^0.5.1+2
   uuid: ^2.0.0
+  carousel_slider: ^1.3.0
   cloud_firestore: ^0.9.7
   firebase_storage: ^2.1.0+1
   firebase_auth: ^0.8.1+4
