--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_bloc: ^0.12.0
   shared_preferences: ^0.5.1+2
   uuid: ^2.0.0
+  intl: ^0.15.8
   carousel_slider: ^1.3.0
   cached_network_image: ^0.7.0
   flutter_image_compress: ^0.4.0
